src/Pages/ProductItem/ProductItem.css
.single-product {
  margin-top: 5rem;
}

.single-product-imgs {
  width: 45rem;
  height: 35rem;
}

.product-img {
  width: 100%;
  height: 100%;
  object-fit: cover;
}

.subimg-container {
    display: flex;
    flex-direction: row;
    justify-content: center;
    gap: 1rem;
    height: 5rem;
}

.product-subimg {
    /* border: solid black 1px; */
    height: 6rem;
    width: 6rem;
    object-fit: cover;
    
}

.product-subimg:hover {
    /* box-sizing: border-box; */
    border: solid black 3px;
    padding: 1px;
}

.single-product-info {
    display: flex;
    flex-direction: row;
    justify-content: space-around;
}

.single-product-desc-section {
    width: 30rem;
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    /* border: solid black 1px; */
}

.purchase-container {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-evenly;
    gap: 0.5rem;
}

.purchase-btn {
    background: white;
    border: solid black 1px;
    font-family: "Josefin Sans", sans-serif;
    height: 2rem;
    width: 70%;
    color: black;
    transition: all 0.3s;
}

.purchase-btn:hover {
    background: black;
    color: white;
    transition: all 0.3s;
}

.add-cart-btn {
    background: white;
    border: solid black 1px;
    font-family: "Josefin Sans", sans-serif;
    height: 2rem;
    width: 70%;
    color: black;
    transition: all 0.3s;
}

.add-cart-btn:hover {
    background: black;
    color: white;
    transition: all 0.3s;
}

